View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025337 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-10-08 11:08 | 2014-11-12 09:53 |
Reporter | Assigned To | bugmaster | |||
Priority | urgent | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025337: Regression to version 6.7.1 : boolean operations fail on two planar circular faces lying in the same plane | ||||
Description | Boolean operations fail on two planar circular faces lying in the same plane. | ||||
Steps To Reproduce | circle c1 -50 0 0 10 circle c2 -35 0 0 10 mkedge e1 c1 mkedge e2 c2 wire w1 e1 wire w2 e2 mkplane f1 w1 mkplane f2 w2 donly f1 f2 fit bop f1 f2 bopfuse r1 bopcommon r2 | ||||
Additional information and documentation updates | class IntTools_EdgeEdge method void IntTools_EdgeEdge::FindSolutions(const IntTools_Range& theR1, const IntTools_Range& theR2, const Bnd_Box& theBox2, IntTools_SequenceOfRanges& theRanges1, IntTools_SequenceOfRanges& theRanges2) Looking for the solutions of the intersection between edges with greater precision. | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5(010) bug25337_1, bug25337_2 | ||||
|
Branch CR25337 has been created by emv. SHA-1: 0aff72068f1c8314be5a7cca6faa7d4b6bbfa450 Detailed log of new commits: Author: emv Date: Fri Oct 10 12:16:25 2014 +0400 0025337: Regression to version 6.7.1 : boolean operations fail on two planar circular faces lying in the same plane class IntTools_EdgeEdge method void IntTools_EdgeEdge::FindSolutions(const IntTools_Range& theR1, const IntTools_Range& theR2, const Bnd_Box& theBox2, IntTools_SequenceOfRanges& theRanges1, IntTools_SequenceOfRanges& theRanges2) Looking for the solutions of the intersection between edges with greater precision. |
|
Git branch CR25337 is ready to be reviewed. |
|
Reviewed |
|
Branch CR25337 has been updated forcibly by mkv. SHA-1: 79b3d3ac813138fab2901a55e563543b840ae5c3 |
|
Dear BugMaster, Branch CR25337 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 79b3d3ac813138fab2901a55e563543b840ae5c3 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) MacOS: 199 (199 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: http://occt-tests/CR25337-master-occt/Debian60-64/bugs/modalg_5/bug25191.html http://occt-tests/CR25337-master-occt/Windows-32-VC10/bugs/modalg_5/bug25191.html bugs modalg_5(010) bug25191: FAILED Testing cases: http://occt-tests/CR25337-master-occt/Debian60-64/bugs/modalg_5/bug25337_1.html http://occt-tests/CR25337-master-occt/Windows-32-VC10/bugs/modalg_5/bug25337_1.html bugs modalg_5(010) bug25337_1: OK http://occt-tests/CR25337-master-occt/Debian60-64/bugs/modalg_5/bug25337_2.html http://occt-tests/CR25337-master-occt/Windows-32-VC10/bugs/modalg_5/bug25337_2.html bugs modalg_5(010) bug25337_2: OK Testing on Linux: occt component : Total MEMORY difference: 369988764 / 370340572 Total CPU difference: 48295.09000000008 / 47188.36999999984 products component : Total MEMORY difference: 120801836 / 120870324 Total CPU difference: 17912.549999999974 / 17518.359999999982 Testing on Windows: occt component : Total MEMORY difference: 273082932 / 272172948 Total CPU difference: 45806.59375 / 32838.390625 products component : Total MEMORY difference: 71273044 / 70036372 Total CPU difference: 17639.109375 / 11148.125 There are no differences in images found by testdiff. |
|
Branch CR25337 has been updated by mkv. SHA-1: 3a4be1e8400298bd42017f01fec981450fd3276a Detailed log of new commits: Author: mkv Date: Wed Oct 15 12:57:58 2014 +0400 Test cases for issue CR25337 |
|
Branch CR25337 has been updated forcibly by emv. SHA-1: 6e40155aa04a53bfce0296928d7daedaff0b4865 |
|
The regression has been fixed. Git branch CR25337 is ready to be reviewed. |
|
Reviewed |
|
Dear BugMaster, Branch CR25337 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 6e40155aa04a53bfce0296928d7daedaff0b4865 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: http://occt-tests/CR25337-master-occt/Windows-32-VC10/bugs/modalg_1/bug19793_2.html bugs modalg_1(006) bug19793_2: FAILED Testing cases: http://occt-tests/CR25337-master-occt/Debian60-64/bugs/modalg_5/bug25337_1.html http://occt-tests/CR25337-master-occt/Windows-32-VC10/bugs/modalg_5/bug25337_1.html bugs modalg_5(010) bug25337_1: OK http://occt-tests/CR25337-master-occt/Debian60-64/bugs/modalg_5/bug25337_2.html http://occt-tests/CR25337-master-occt/Windows-32-VC10/bugs/modalg_5/bug25337_2.html bugs modalg_5(010) bug25337_2: OK Testing on Linux: occt component : Total MEMORY difference: 371780592 / 371369680 Total CPU difference: 47283.09000000005 / 48178.50000000005 products component : Total MEMORY difference: 126213064 / 126232068 Total CPU difference: 16881.78999999999 / 17342.020000000015 Testing on Windows: occt component : Total MEMORY difference: 273667108 / 272986544 Total CPU difference: 40538.4375 / 36895.96875 products component : Total MEMORY difference: 83074528 / 70377380 Total CPU difference: 12522.90625 / 12121.578125 There are no differences in images found by testdiff. |
|
The regression bugs modalg_1 bug19793_2 is due to low performance of the case. I've got the following results for this case on my workstation: CR25337 - 1) 92.4305925 seconds, 2) 92.4617927 seconds MASTER - 1) 91.9001891 seconds, 2) 92.0561901 seconds Could you please test the case again? Please, try to measure the performance of the case in the branch and master on the same workstation. |
|
Test case bugs/modalg_1(006)/bug19793_2 was retested. Now is OK. |
|
Branch CR25337 has been deleted by inv. SHA-1: 6e40155aa04a53bfce0296928d7daedaff0b4865 |
occt: master 524a5f7a 2014-10-29 06:31:18
Committer: bugmaster Details Diff |
0025337: Regression to version 6.7.1 : boolean operations fail on two planar circular faces lying in the same plane class IntTools_EdgeEdge method void IntTools_EdgeEdge::FindSolutions(const IntTools_Range& theR1, const IntTools_Range& theR2, const Bnd_Box& theBox2, IntTools_SequenceOfRanges& theRanges1, IntTools_SequenceOfRanges& theRanges2) Looking for the solutions of the intersection between edges with greater precision. Test cases for the issue. |
Affected Issues 0025337 |
|
mod - src/IntTools/IntTools_EdgeEdge.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug25337_1 | Diff File | ||
add - tests/bugs/modalg_5/bug25337_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-10-08 11:08 |
|
New Issue | |
2014-10-08 11:08 |
|
Assigned To | => emv |
2014-10-08 11:09 |
|
Priority | normal => urgent |
2014-10-08 11:14 |
|
Status | new => assigned |
2014-10-10 12:16 | git | Note Added: 0032957 | |
2014-10-10 12:18 |
|
Note Added: 0032958 | |
2014-10-10 12:18 |
|
Assigned To | emv => pkv |
2014-10-10 12:18 |
|
Status | assigned => resolved |
2014-10-10 12:18 |
|
Additional Information Updated | |
2014-10-10 12:22 |
|
Note Added: 0032959 | |
2014-10-10 12:22 |
|
Status | resolved => reviewed |
2014-10-10 12:22 |
|
Assigned To | pkv => mkv |
2014-10-13 21:24 | git | Note Added: 0033044 | |
2014-10-15 12:59 |
|
Note Added: 0033123 | |
2014-10-15 12:59 |
|
Assigned To | mkv => emv |
2014-10-15 12:59 |
|
Status | reviewed => assigned |
2014-10-15 13:00 |
|
Test case number | => bugs modalg_5(010) bug25337_1, bug25337_2 |
2014-10-15 13:00 | git | Note Added: 0033124 | |
2014-10-29 09:32 | git | Note Added: 0033797 | |
2014-10-29 09:34 |
|
Note Added: 0033798 | |
2014-10-29 09:34 |
|
Assigned To | emv => pkv |
2014-10-29 09:34 |
|
Status | assigned => resolved |
2014-10-29 13:05 |
|
Note Added: 0033815 | |
2014-10-29 13:05 |
|
Assigned To | pkv => mkv |
2014-10-29 13:05 |
|
Status | resolved => reviewed |
2014-10-29 19:13 |
|
Note Added: 0033856 | |
2014-10-29 19:13 |
|
Assigned To | mkv => emv |
2014-10-29 19:13 |
|
Status | reviewed => feedback |
2014-10-30 09:31 |
|
Note Added: 0033860 | |
2014-10-30 09:31 |
|
Assigned To | emv => mkv |
2014-10-30 09:31 |
|
Status | feedback => resolved |
2014-10-30 09:51 |
|
Status | resolved => feedback |
2014-10-30 12:10 |
|
Note Added: 0033874 | |
2014-10-30 12:10 |
|
Assigned To | mkv => bugmaster |
2014-10-30 12:10 |
|
Status | feedback => tested |
2014-10-31 14:03 | bugmaster | Changeset attached | => occt master 524a5f7a |
2014-10-31 14:03 | bugmaster | Status | tested => verified |
2014-10-31 14:03 | bugmaster | Resolution | open => fixed |
2014-11-11 12:42 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 13:03 |
|
Status | verified => closed |
2014-11-12 09:53 | git | Note Added: 0034307 |